RESOLVED FIXED278303
Tick marks of range input type aren't drawn in the page zoom < 1
https://bugs.webkit.org/show_bug.cgi?id=278303
Summary Tick marks of range input type aren't drawn in the page zoom < 1
Fujii Hironori
Reported 2024-08-18 21:43:40 PDT
Created attachment 472212 [details] test case Tick marks of range input type aren't drawn in the page zoom < 1 1. Open a test case 2. Zoom out Actual: No tick marks aren't drawn Expected: Tick marks aren't drawn
Attachments
test case (269 bytes, text/html)
2024-08-18 21:43 PDT, Fujii Hironori
no flags
test case 2 (429 bytes, text/html)
2024-08-18 21:47 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2024-08-18 21:47:02 PDT
Created attachment 472213 [details] test case 2
Fujii Hironori
Comment 2 2024-08-18 22:01:08 PDT
EWS
Comment 3 2024-08-19 12:53:23 PDT
Committed 282451@main (188ca3010ccb): <https://commits.webkit.org/282451@main> Reviewed commits have been landed. Closing PR #32376 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-08-19 12:54:14 PDT
Note You need to log in before you can comment on or make changes to this bug.