Tick marks of range input type aren't drawn in the page zoom factor < 1 https://bugs.webkit.org/show_bug.cgi?id=278303

Reviewed by Alan Baradlay.

Tick mark tickness was 1px and truncating to a integar. If a zoom
factor was less than 1, the tickness became 0, and no tick marks were
displayed. Use FloatSize for sliderTickSize rather than IntSize.

* Source/WebCore/platform/graphics/controls/SliderTrackPart.cpp:
(WebCore::SliderTrackPart::drawTicks const):

Canonical link: https://commits.webkit.org/282451@main